# internal/router/health-router.go
@@ -1,0 +1,16 @@
+package router
+
+import (
+	"gilab.com/pragmaticrewies/golang-gin-poc/internal/controller"
+
+	"github.com/gin-gonic/gin"
+)
+
+func registerHealthRoutes(
+	router *gin.RouterGroup,
+	healthController controller.HealthController,
+) {
+	flowers := router.Group("/health")
+
+	flowers.GET("", healthController.Check)
+}
